Print the bytes before the interpretation
PacketDecoder's sample reported a body's length and then showed parsed
headers and query parameters — never the body itself. Anyone starting
from it writes a decoder that hands them an interpretation, which is the
one thing a capture tool must not do.

It now prints the raw body first: verbatim when the bytes decode as
text, so whitespace and key order survive, and Inspector's hex+ASCII
dump otherwise. Bodies over 16 KB are truncated with the full length
noted, since a response body is often megabytes.

This cost real time. DeepL's endpoint checks how many spaces follow
"method": and what order the JSON keys are in. The decoder was printing
JSON that had been parsed and re-serialized, so a hand-built request and
a captured one printed identically and the difference was invisible.

README rewritten around the same point, plus what the library actually
decodes, a working server snippet, and the byte-level callbacks that
were hard to find: onSSLProxyTx/Rx, Http2Filter, WebSocketFilter.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>